socket-demo&.gitignore忽略修改

--- a/netty-socket-server/src/main/resources/config/application.yaml
+++ b/netty-socket-server/src/main/resources/config/application.yaml
@@ -4,3 +4,8 @@ logging:
   file: netty-socket-server/logs/netty-socket-server.log
   level:
     root: info
+
+#####################################
+socket:
+  tcp:
+    port: 8066
