--- a/socket-demo/pom.xml
+++ b/socket-demo/pom.xml
@@ -9,14 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>netty-socket-server</artifactId>
+    <artifactId>socket-demo</artifactId>
 
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.50.Final</version>
-        </dependency>
-    </dependencies>
 </project>
